syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/jdxj/sign/internal/proto/task";

service TaskService {
    rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
    rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
    rpc GetTasks(GetTasksRequest) returns (GetTasksResponse);
    rpc UpdateTask(UpdateTaskRequest) returns(google.protobuf.Empty);
    rpc GetTaskKinds(google.protobuf.Empty) returns (GetTaskKindsResponse);
    rpc GetTaskInputs(GetTaskInputsRequest) returns (GetTaskInputsResponse);
    rpc DispatchTasks(DispatchTasksRequest) returns (google.protobuf.Empty);
}


message Task {
    int64 task_id = 1;
    string description = 2;
    int64 user_id = 3;
    string kind = 4;
    string spec = 5;
    bytes param = 6;
    google.protobuf.Timestamp created_at = 7;
}

message CreateTaskRequest {
    Task task = 1;
}

message CreateTaskResponse {
    int64 task_id = 1;
}

message GetTaskRequest {
    int64 task_id = 1;
}

message GetTaskResponse {
    Task task = 1;
}

message GetTasksRequest {
    int64 task_id = 1;
    string description = 2;
    int64 user_id = 3;
    string kind = 4;
    string spec = 5;
    google.protobuf.Timestamp created_at = 6;
    int64 offset = 7;
    int64 limit = 8;
}

message GetTasksResponse {
    int64 count = 1;
    repeated Task tasks = 2;
}

message UpdateTaskRequest {
    int64 task_id = 1;
    int64 user_id = 2;
}

// Kind 使用时要用字符串形式
enum Kind {
    UNKNOWN_KIND = 0;
    // B站
    BILIBILI_SIGN_IN = 1;
    BILIBILI_B_COUNT = 2;
    // Go语言中文网
    STG_SIGN_IN = 3;
    // V2ex
    V2EX_SIGN_IN = 4;
    // Evolution X
    RAPHAEL = 5;
    RELEASE = 6;
    // 掘金签到
    JUEJIN_Sign_IN = 7;
    // 签到天数统计
    JUEJIN_COUNT = 8;
    // 矿石数
    JUEJIN_POINT = 9;
    // 码农日历
    JUEJIN_CALENDAR = 10;
    // 自定义消息
    CUSTOM_MESSAGE = 11;
}

message GetTaskKindsResponse {
    repeated string kinds = 1;
}

message DispatchTasksRequest {
    string spec = 1;
}

message ReadyTasks {
    repeated Task tasks = 1;
}

message GetTaskInputsRequest {
    string kind = 1;
}

message Input {
    string key = 1;
    string description = 2;
}

message GetTaskInputsResponse {
    repeated Input inputs = 1;
}
